Bruk kun eessiMottakere til å avgjøre om det skal sendes SED eller brev