@@ -65,7 +65,6 @@ public class SendVedtakUtlandTest {
         behandling.setId(BEHANDLING_ID);
         prosessinstans = new Prosessinstans();
         prosessinstans.setBehandling(behandling);
-        prosessinstans.setData(ProsessDataKey.EESSI_MOTTAKERE, List.of(MOTTAKER_INSTITUSJON));
         when(behandlingService.hentBehandling(anyLong())).thenReturn(prosessinstans.getBehandling());
 
         Behandlingsresultat behandlingsresultat = new Behandlingsresultat();
@@ -79,14 +78,12 @@ public class SendVedtakUtlandTest {
         behandlingsresultat.setBehandling(behandling);
         when(behandlingsresultatService.hentBehandlingsresultat(anyLong())).thenReturn(behandlingsresultat);
 
-        when(landvelgerService.hentUtenlandskTrygdemyndighetsland(anyLong())).thenReturn(Collections.singletonList(Landkoder.AX));
-
         sendVedtakUtland = new SendVedtakUtland(eessiService, behandlingService, behandlingsresultatService, brevBestiller, landvelgerService);
     }
 
     @Test
     public void utførSteg_artikkel12Suksessfull_statusErAvgiftsoppgave() throws Exception {
-        when(eessiService.landErEessiReady(eq(BucType.LA_BUC_04.name()), eq(Landkoder.AX.name()))).thenReturn(Boolean.TRUE);
+        prosessinstans.setData(ProsessDataKey.EESSI_MOTTAKERE, List.of(MOTTAKER_INSTITUSJON));
         sendVedtakUtland.utfør(prosessinstans);
         verify(eessiService).opprettOgSendSed(anyLong(), eq(List.of(MOTTAKER_INSTITUSJON)), eq(BucType.LA_BUC_04), eq(null));
         assertThat(prosessinstans.getSteg()).isEqualTo(ProsessSteg.IV_OPPRETT_AVGIFTSOPPGAVE);
@@ -94,8 +91,8 @@ public class SendVedtakUtlandTest {
 
     @Test
     public void utførSteg_artikkel13Suksessfull_statusErAvgiftsoppgave() throws Exception {
+        prosessinstans.setData(ProsessDataKey.EESSI_MOTTAKERE, List.of(MOTTAKER_INSTITUSJON));
         lovvalgsperiode.setBestemmelse(Lovvalgbestemmelser_883_2004.FO_883_2004_ART13_1A);
-        when(eessiService.landErEessiReady(eq(BucType.LA_BUC_02.name()), eq(Landkoder.AX.name()))).thenReturn(Boolean.TRUE);
         sendVedtakUtland.utfør(prosessinstans);
         verify(eessiService).opprettOgSendSed(anyLong(), eq(List.of(MOTTAKER_INSTITUSJON)), eq(BucType.LA_BUC_02), eq(null));
         assertThat(prosessinstans.getSteg()).isEqualTo(ProsessSteg.IV_OPPRETT_AVGIFTSOPPGAVE);
@@ -112,8 +109,8 @@ public class SendVedtakUtlandTest {
 
     @Test
     public void utførStegForArtikkel11_suksessfull_statusErAvsluttBehandling() throws Exception {
+        prosessinstans.setData(ProsessDataKey.EESSI_MOTTAKERE, List.of(MOTTAKER_INSTITUSJON));
         lovvalgsperiode.setBestemmelse(Lovvalgbestemmelser_883_2004.FO_883_2004_ART11_3A);
-        when(eessiService.landErEessiReady(eq(BucType.LA_BUC_05.name()), eq(Landkoder.AX.name()))).thenReturn(Boolean.TRUE);
         sendVedtakUtland.utfør(prosessinstans);
         verify(eessiService).opprettOgSendSed(anyLong(), eq(List.of(MOTTAKER_INSTITUSJON)), eq(BucType.LA_BUC_05), eq(null));
         assertThat(prosessinstans.getSteg()).isEqualTo(ProsessSteg.IV_AVSLUTT_BEHANDLING);
@@ -122,9 +119,7 @@ public class SendVedtakUtlandTest {
     @SuppressWarnings("unchecked")
     @Test
     public void utførSteg_utenOppgittMottakerinstitusjon_forventHenterMottakerinstitusjonFraTidligereBuc() throws MelosysException {
-        when(landvelgerService.hentUtenlandskTrygdemyndighetsland(anyLong())).thenReturn(Collections.singletonList(Landkoder.SE));
-        when(eessiService.landErEessiReady(eq(BucType.LA_BUC_04.name()), eq(Landkoder.SE.name()))).thenReturn(Boolean.TRUE);
-        prosessinstans.setData(ProsessDataKey.EESSI_MOTTAKERE, List.of(""));
+        prosessinstans.setData(ProsessDataKey.EESSI_MOTTAKERE, List.of(MOTTAKER_INSTITUSJON));
 
         Aktoer myndighet = new Aktoer();
         myndighet.setInstitusjonId(MOTTAKER_INSTITUSJON);
@@ -134,8 +129,6 @@ public class SendVedtakUtlandTest {
         fagsak.setAktører(Set.of(myndighet));
         fagsak.setGsakSaksnummer(1L);
         behandling.setFagsak(fagsak);
-
-        when(eessiService.hentMottakerinstitusjonFraBuc(any(Fagsak.class), any(BucType.class))).thenReturn(MOTTAKER_INSTITUSJON);
 
         sendVedtakUtland.utfør(prosessinstans);
 
